# activitypub-federation-queue-batcher

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  batch-receiver.Dockerfile  batch-sender.Dockerfile  build-dev-images.sh  docker-compose.yml  inbox-receiver.Dockerfile  pyproject.toml
.github/: renovate.json5
.github/workflows/: codeql.yml  ghcr-image-main.yml  pr-build.yml
examples/back/: README.md  docker-compose.yml
examples/front/: README.md  ansible.cfg  docker-compose.yml  docker-compose.yml.j2  inventory.yml.example  playbook.yml
examples/front/roles/batcher/tasks/: main.yml
examples/front/roles/batcher/templates/: docker-compose.yml.j2
examples/front/roles/proxy/handlers/: main.yml
examples/front/roles/proxy/tasks/: main.yml
examples/front/roles/proxy/templates/: cloudflare.ini.j2  nginx.conf.j2
src/activitypub_federation_queue_batcher/: _aiohttp_helpers.py  _apub_helpers.py  _logging_helpers.py  _rmq_helpers.py  constants.py  types.py
src/activitypub_federation_queue_batcher/batch_receiver/: __main__.py
src/activitypub_federation_queue_batcher/batch_sender/: __main__.py
src/activitypub_federation_queue_batcher/inbox_receiver/: __main__.py
